Move buttons left to avoid overlapping
Avoid overlapping google map's zoom-out button.

--- a/map-1.1.css
+++ b/map-1.1.css
@@ -64,8 +64,8 @@ html, body, #map-canvas, #map-canvas-wrapper {
 	padding: 3px;
 	cursor: pointer;
 } 
-#panel-button { right: 15px; }
-#navaids-button {right: 140px; }
+#panel-button { right: 45px; }
+#navaids-button {right: 160px; }
 
 #panel-button:hover, #navaids-button:hover {
 	background-color: #ccc;
